app/assets/stylesheets/application.scss
// Custom bootstrap variables must be set or import before bootstrap itself.
@import "variables";
@import "bootstrap";
@import "bootstrap-fix";
@import "font-awesome";
@import 'chosen';
@import 'ImageSelect';
@import "common";

@import "campaigns";
@import "conversations";
@import "welcome";
@import "devise";
@import "users";
@import "posts";

body {
  font-family: 'Open Sans', sans-serif;
  color: #888;
  font-size: 13px;
  line-height: 1.5;

  .section-header {
    padding-top: 32px;
    padding-bottom: 16px;
  }
}

.card {
  img {
    height: auto;
  }

  .card-title {
    a {
      color: $primary_color;

      &:hover {
        color: $primary_blur_color;
        text-decoration: none;
        text-shadow: 1px 2px 1px rgba(254, 147, 34, 0.5)
      }
    }
  }
}

.header {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 169px;
  z-index: 999;

  background-color: $bg_color;

  .brand {
    height: 100px;

    a {
      text-decoration: none;
    }

    .fa {
      color: #FE9322;
      font-size: 50px;
      position: relative;
      top: 11px;
      padding: 10px;
    }

    .brand-name {
      font-size: 26px;
      font-weight: bold;

      line-height: 100px;
    }

    .brand-first-name {
      color: $primary_color;
    }

    .brand-last-name {
      color: $secondary_color;
      margin-left: -2px;
    }
  }

  .navbar-header {
    &.is-visible {
      .nav {
        display: block !important;
      }
    }

    background: rgb(245, 245, 245);
    .navbar-container {

      .navbar {
        background-color: transparent;
        border-radius: none;

        padding-top: 0;
        padding-bottom: 0;

        .nav {
        }

        form {
          position: absolute;
          top: -88px;
          right: 0;
          padding: 20px 0;

          input {
            padding-right: 32px;

            &:focus {
              border-color: $primary_color;
            }
          }

          button {
            border: none;
            position: relative;
            left: -50px;

            color: $primary_color;
            background: transparent;
          }
        }

        .cd-secondary-nav-trigger {
          color: $secondary_color;
          font-size: 30px;

          position: absolute;
          top: 16px;
          right: 16px;
        }

        .nav-item {
          margin-left: 0;

          &:hover {
            a {
              @include highlight();
            }
          }

          &.active a,
          a.active {
              @include highlight();
          }

          a {
            border-top: solid 4px transparent;

            -o-transition: border .3s linear;
            -moz-transition: border .3s linear;

            -webkit-transition: border .3s linear;
            transition: border .3s linear;

            outline: 0;
            line-height: 1.42857143;

            color: #444;
            font-size: 13px;
            font-weight: 400;

            display: inherit;
            line-height: 42px;
            padding-top: 0;
          }

          &.edit-profile {
            &:hover {
              a {
                color: inherit;
              }
            }

            .dropdown-toggle {
              cursor: pointer;

              margin-top: 25px;
              font-size: 16px;
              background-color: transparent;

              &:hover {
                color: $primary_color;
              }

              img {
                width: 30px;
                height: 30px;
              }
            }

            .dropdown-menu {
              left: auto;
              right: 0;
              border-radius: 0;

              a {
                border: none;
                line-height: 20px;

                margin-left: 4px;
                transition: margin-left 0.3s;

                &:hover,
                &.active {
                  margin-left: 12px;
                  background-color: transparent;
                  color: $primary_color;
                }

                &:first-child {
                  position: relative;
                  top: 3px;
                }
              }
            }
          }

          &.message {
            a {
              border: none;

              i {
                font-size: 24px;
                margin-top: 12px;
              }

              span {
                position: relative;
                top: 2px;
                left: -13px;
                font-size: 9px;
              }
            }
          }
        }
      }
    }
  }
}

.onboarding-container {
  display: none;

  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  z-index: 9999;

  .content {
    width: 100%;
    height: 100%;
    margin: auto;
    display: inline-block;

    background-color: rgba(0, 0, 0, 0.85);

    .fa-close {
      position: absolute;
      top: 20px;
      right: 20px;
      font-size: 26px;
      color: #fff;

      cursor: pointer;
    }

    section {
      height: 100%;
      display: flex;
      justify-content: center;
      flex-direction: column;

      .welcome-message {
        align-self: center;

        h1 {
          color: $primary_color;
          margin-top: 30px;
        }

        h4 {
          color: $bg_color;
          margin-top: 30px;
          margin-bottom: 10px;
        }
      }

      ul {
        align-self: center;
      }
    }

    ul {
      list-style: none;
      margin: 0;
      padding: 0;
      display: inline-block;

      a {
        text-decoration: none;

        li {
          display: inline-block;
          float: left;
          margin: 0 10px;

          width: 180px;
          height: 180px;

          border-radius: 180px;
          padding: 20px;

          background-color: #5bc0de;

          border: 1px dashed #fff;

          &:hover {
            box-shadow: 0px 6px 6px rgba(91, 192, 222, 0.39);
          }
        }

        &:first-child {
          li {
            background-color: #d9534f;

            &:hover {
              box-shadow: 0px 6px 6px rgba(217, 83, 79, 0.39);
            }
          }
        }

        &:last-child {
          li {
            background-color: $primary_color;

            &:hover {
              box-shadow: 0px 6px 6px rgba(254, 147, 34, 0.39);
            }
          }
        }

        .fa {
          font-size: 50px;
          color: #CCC;
          margin-top: 20px;
        }

        p {
          font-size: 20px;
          color: $bg_color;

          margin-top: 7px;

          font-weight: bold;
        }
      }
    }
  }
}

.main-content {
  margin-top: 178px;
}

.alert {
  position: relative;
  top: 7px;

  i {
    font-size: 20px;
    position: relative;
    top: -10px;
    left: 7px;
  }

  &.alert-info {
    background-color: $primary_color;
    color: #fff;
    border: none;
    font-size: 22px;
    text-align: center;
  }
}

@import "multi-screen";

